[tool.poetry]
name = "maersk-task"
version = "0.1.0"
description = ""
authors = ["Mehdi Ghodsizadeh <mehdi.ghodsizadeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
simpy = "^4.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
